lab1/Test/L1-A-1-22.output
Error Type B at Line 4
Error Type B at Line 7
Error Type B at Line 9
Error Type B at Line 12
Error Type B at Line 13
