lab1/Test/L1-A-1-22.cmm
struct QQmsg7Sg1a {
}buesNPrftGpfXv ( ) {
  float fgDWAa6 = - ! iiCR2vLbCRpmYshWvyHf = xoVhd7afrVUkZaKkUvK 
    , JwXP5drAyWYAFJvtoInV = ycZ , + N6HyWAp ;
  float ol2NKtMGwFAe = ! Eug0l_31BRA3V / GJEen9FMbABB96f25Ur 
    * pzMHP59PzEl0JBc63Wc / I14tRICy / jsuF9FFHCfpozDTg 
    / JPlUHFE - T + hlo6Q_UlcI7LVWwoHU >= K54ZNN6 / , 
    H1GgHM_Fp_ZJnZ = n6OQ3KHr7iUVkr , iwz ;
  if ( - - || zMD_eKbPShT = uttTzW354Ax8 )   OhCChmNiieDK 
    ;

|| }
struct aVlc5BvEzlYjR7kfDlJ && ;
